    list will grow.

* v1.4 (September 23rd, 2018)
  - New Checks:
    connect-by-name
    skipped-base-method
    qstring-varargs
    fully-qualified-moc-types
    qt-keywords, with fixit included
    qhash-with-char-pointer-key
    wrong-qevent-cast
    static-pmf
    raw-environment-function
    empty-qstringliteral
  - auto-unexpected-qstringbuilder now also warns for lambdas returning QStringBuilder
  - performance optimizations
  - Added -header-filter=<regex> option to clazy-standalone. Only headers matching the regexp will have warnings,
    besides the .cpp file from the translation unit, which is never filtered out.
  - Added -ignore-dirs=<regex> option to clazy-standalone, and its CLAZY_IGNORE_DIRS env variable equivalent.
  - Added CLAZY_HEADER_FILTER env variable which adds above functionality to both clazy and clazy-standalone
  - unused-non-trivial-variable got unused-non-trivial-variable-no-whitelist option
  - unused-non-trivial-variable got user-blacklist and user-whitelist support
  - container-inside-loop is now a manual check instead of level2
  - HiddenLevel was renamed to ManualLevel
  - connect-3arg-lambda now warns when passing a lambda to QTimer::singleShot() or QMenu::addAction() without a context object
  - old-style-connect warns for QMenu::addAction() and QMessageBox::open() too now

* v1.4.1 (probably never)
  - fully-qualified-moc-types now warns for slot/invokable return values too. They need to be fully qualified for QML.
  - Fixed a crash (clang assert) in raw-environment-function

* v1.5 (, 2019)
  - New Checks:
    ifndef-define-typo
    lowercase-qml-type-name
  - New Fixits:
    range-loop now supports adding missing refs or const-ref
    function-args-by-ref now adding missing refs or const-ref (experimental)
  - Removed support for the obscure -DCLAZY_BUILD_UTILS_LIB to simplify the CMakeLists.txt
  - Renamed the clazy plugin from ClangLazy.so to ClazyPlugin.so